--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,8 @@
-0.1
+Next release
 
-  Initial release.
+  - Add warning if content-length != body length.
+
+0.1 (2008/06/13)
+
+  - Initial release.
 
