- Add a modified version of the patch attached to   http://bugs.repoze.org/issue95 (dont show any entries in the GUI   if "keep" is 0).
- Document the existence and usage of the threads middleware.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,10 @@
 Next release
 ------------
 
+- If the ``keep`` parameter in the "responselogger" middleware is set
+  to zero, no entries are logged (not even one, as previously may have
+  happened).
+
 - Better test coverage.
 
 - Ignore HTTP errors in post-mortem debug middleware. The exceptions
