--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,8 +1,11 @@
 repoze.debug Changes
 ====================
 
-After 0.7.2
------------
+0.7.3 (2012-03-29)
+------------------
+
+- This release is the last which will maintain support for Python 2.4 /
+  Python 2.5.
 
 - Added support for continuous integration using ``tox`` and ``jenkins``.
 
