--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,11 @@
 repoze.debug Changes
 ====================
 
+Next release
+------------
+
+- Drop support for Python 2.4 / 2.5.
+
 0.7.3 (2012-03-29)
 ------------------
 
