--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,6 +4,8 @@ repoze.debug Changes
 Next release
 ------------
 
+- Add support for Python 3.2 / 3.3.
+
 - Drop support for Python 2.4 / 2.5.
 
 0.7.3 (2012-03-29)
